[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intradev"
version = "0.0.2"
authors = [
  { name="Aiden McDougal", email="lilsteeler03@gmail.com" },
]
description = "tool to accelerate creation of simple IO Python GUIs."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "customtkinter>=5.2",
]

[project.urls]
Homepage = "https://github.com/asm3002/intradev"
Issues = "https://